gpgmepp GIT head build-error
Closed, ResolvedPublic

Assigned To
Authored By
ametzler1
May 25 2025, 2:34 PM
Subscribers

Description

Hello, I have tried building gpgmepp head (a13ba8a8170e81733c89af794f13839891efd563) against gpgme HEAD (e763305ff1ce2aeaef1087f543ceb473bc3cb8d2) and got the following error:

[ 87%] Linking CXX executable run-createkey
cd /tmp/GPGMEPP/gpgmepp/build/tests && /usr/bin/cmake -E cmake_link_script CMakeFiles/run-createkey.dir/link.txt --verbose=1
/usr/bin/ld: ../src/libgpgmepp.so.7.0.0: undefined reference to `GpgME::operator<<(std::ostream&, GpgME::Error const&)'
collect2: error: ld returned 1 exit status
/usr/lib/ccache/c++ -g -O2 -ffile-prefix-map=/tmp/GPGMEPP/gpgmepp=. -fstack-protector-strong -fstack-clash-protection -Wformat -Werror=format-security -fcf-protection -Wdate-time -D_FORTIFY_SOURCE=2 -Wall -Wextra -Wno-shadow -Wsuggest-override -Wzero-as-null-pointer-constant -Wl,-z,relro -Wl,-z,now "CMakeFiles/run-createkey.dir/run-createkey.cpp.o" -o run-createkey  -Wl,-rpath,/tmp/GPGMEPP/gpgmepp/build/src ../src/libgpgmepp.so.7.0.0 /usr/lib/x86_64-linux-gnu/libgpgme.so
make[3]: *** [tests/CMakeFiles/run-createkey.dir/build.make:104: tests/run-createkey] Error 1