Fix wrong definition of operator<<(std::ostream &, const Error &)

* src/error.cpp (operator<<): Put definition in namespace GpgME.
--

Fixes-commit: 23c297d13e0437ae88e81230ba44d97b462dc93b
GnuPG-bug-id: 7665